--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bootstrap": "^5.3.0",
     "sass": "^1.63.4"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.16"
   }
 }
- 
